Fix bugs and issue in main controller, main.java and other files. T22: Ensure technical integration of all components #25